hotfix: fix avatar upload